--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.16.11",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "firebase": "^8.9.1",
+    "http-proxy-middleware": "^2.0.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-toastify": "^7.0.4",
+    "slugify": "^1.6.0"
   }
 }
